XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>

* More bound scintilla lexers
* Unhandled exceptions hook now saves the trace back and the log window content
  in a file.
* Some autocomplete improvements
* Allow explicit reloading even if a buffer is not modified.
* File outside modification detection now includes a file size.
* Files deleted via IDE UI are removed from the recent files list as well.
* Bug fix: respect multibyte chars when search incrementally
* Bug fix: autocomplition for non-ascii text did not work.
* Main menu and the text editor context menu now have 'open in browser'
  item.
* Main menu and the text editor context menu now have 'downdload and show'
  item.
* Main menu 'tab' now has 'highlight in...' items.
* Bug fix: 'highlight in file system browser' did not work if it was not a
  project file.
* Basic pyflakes support.
* Python .cgi support in outline browser.
* Bash/sh file type recognition added.
* Pylint and other tools support for python .cgi files.
* Bug fix: improper tooltips and text in similarities pylint sections
  if contained html.
* Bug fix: double slashes in full file names when opened via Ctrl+I.
* New feature: access to the project rope settings file via the Project menu.
* Better dialogs for the cases when both the disk version and the buffer
  content were modified and the user closes the tab or saves the tab content.
* New feature: tab context menu and current path label context menu on the
  status bar are extended with copying directory path and copying file name
  options.


2013 Jan 20 Sergey Satskiy <sergey.satskiy@gmail.com>

* Release 1.8
* Bug fix: running python tidy with settings led to an exception.
* Improvement: focus is moved to the current editor widget automatically when
  it is received by the editor tab widget. Issue #350.
* Improvement: 'highilight in project' and 'highlight in filesystem'
  editor tab context menu added. Issue #258.